// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInput (gluestack-ui) 快照测试 应该匹配基础输入框的快照 1`] = `
<View
  data-style=""
  dataSet={
    {
      "disabled": "false",
      "invalid": "false",
      "style": "",
    }
  }
  feedbackId="field-1-feedback"
  hasFeedbackText={false}
  hasHelpText={false}
  helpTextId="field-1-helptext"
  id="field-1"
  isReadOnly={false}
  isRequired={false}
  labelId="field-1-label"
  setHasFeedbackText={[Function]}
  setHasHelpText={[Function]}
  size="md"
  states={
    {
      "disabled": false,
      "invalid": false,
    }
  }
  style={
    [
      undefined,
      {},
      undefined,
      {
        "flexDirection": "column",
      },
      undefined,
      undefined,
      undefined,
      {},
      undefined,
      undefined,
    ]
  }
  sx={{}}
>
  <View
    data-style=""
    dataSet={
      {
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
        "invalid": "false",
        "readonly": "false",
        "required": "false",
        "style": "",
      }
    }
    size="md"
    states={
      {
        "disabled": false,
        "focus": false,
        "focusVisible": false,
        "hover": undefined,
        "invalid": false,
        "readonly": false,
        "required": false,
      }
    }
    style={
      [
        undefined,
        {},
        undefined,
        {
          "alignContent": "center",
          "borderColor": "#D4D4D4",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        },
        undefined,
        undefined,
        undefined,
        {
          "height": 40,
        },
        undefined,
        {},
        undefined,
        undefined,
      ]
    }
    sx={{}}
    variant="outline"
  >
    <TextInput
      accessible={true}
      aria-label="Input Field"
      aria-selected={false}
      data-style=""
      dataSet={
        {
          "disabled": "false",
          "focus": "false",
          "focusVisible": "false",
          "hover": "false",
          "invalid": "false",
          "readonly": "false",
          "required": "false",
          "style": "",
        }
      }
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder="请输入内容"
      placeholderTextColor="#737373"
      readOnly={false}
      secureTextEntry={false}
      size="md"
      states={
        {
          "disabled": undefined,
          "focus": false,
          "focusVisible": false,
          "hover": undefined,
          "invalid": false,
          "readonly": false,
          "required": false,
        }
      }
      style={
        [
          undefined,
          {},
          undefined,
          {
            "color": "#262626",
            "flex": 1,
          },
          undefined,
          undefined,
          undefined,
          {
            "overflow": "hidden",
            "paddingHorizontal": 12,
            "paddingVertical": "auto",
          },
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          {},
          undefined,
          {},
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          {
            "color": "#262626",
          },
          undefined,
          undefined,
        ]
      }
      sx={
        {
          "_dark": {
            "color": "$textDark50",
            "placeholderTextColor": "$textDark400",
          },
          "color": "$textLight900",
        }
      }
      type="text"
    />
  </View>
</View>
`;

exports[`AppInput (gluestack-ui) 快照测试 应该匹配带标签的快照 1`] = `
<View
  data-style=""
  dataSet={
    {
      "disabled": "false",
      "invalid": "false",
      "style": "",
    }
  }
  feedbackId="field-1-feedback"
  hasFeedbackText={false}
  hasHelpText={false}
  helpTextId="field-1-helptext"
  id="field-1"
  isReadOnly={false}
  isRequired={false}
  labelId="field-1-label"
  setHasFeedbackText={[Function]}
  setHasHelpText={[Function]}
  size="md"
  states={
    {
      "disabled": false,
      "invalid": false,
    }
  }
  style={
    [
      undefined,
      {},
      undefined,
      {
        "flexDirection": "column",
      },
      undefined,
      undefined,
      undefined,
      {},
      undefined,
      undefined,
    ]
  }
  sx={{}}
>
  <View
    data-style=""
    dataSet={
      {
        "style": "",
      }
    }
    feedbackId="field-1-feedback"
    hasFeedbackText={false}
    hasHelpText={false}
    helpTextId="field-1-helptext"
    id="field-1-label"
    isDisabled={false}
    isInvalid={false}
    isReadOnly={false}
    labelId="field-1-label"
    setHasFeedbackText={[Function]}
    setHasHelpText={[Function]}
    style={
      [
        undefined,
        {},
        undefined,
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 4,
        },
        undefined,
        undefined,
        undefined,
        {
          "marginBottom": 4,
        },
        undefined,
        undefined,
      ]
    }
    sx={
      {
        "mb": "$1",
      }
    }
  >
    <Text
      data-style=""
      dataSet={
        {
          "style": "",
        }
      }
      size="md"
      style={
        [
          undefined,
          {},
          undefined,
          {
            "color": "#525252",
            "fontFamily": undefined,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          undefined,
          undefined,
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          {
            "color": "#262626",
            "fontWeight": "500",
          },
          undefined,
          undefined,
          {},
          undefined,
          {
            "color": "#262626",
            "fontWeight": "500",
          },
          undefined,
          undefined,
          undefined,
          {},
          undefined,
          {
            "color": "#262626",
            "fontWeight": "500",
          },
          undefined,
          undefined,
        ]
      }
      sx={
        {
          "_dark": {
            "color": "$textDark50",
          },
          "color": "$textLight900",
          "fontWeight": "$medium",
        }
      }
    >
      用户名
    </Text>
  </View>
  <View
    data-style=""
    dataSet={
      {
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
        "invalid": "false",
        "readonly": "false",
        "required": "false",
        "style": "",
      }
    }
    size="md"
    states={
      {
        "disabled": false,
        "focus": false,
        "focusVisible": false,
        "hover": undefined,
        "invalid": false,
        "readonly": false,
        "required": false,
      }
    }
    style={
      [
        undefined,
        {},
        undefined,
        {
          "alignContent": "center",
          "borderColor": "#D4D4D4",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        },
        undefined,
        undefined,
        undefined,
        {
          "height": 40,
        },
        undefined,
        {},
        undefined,
        undefined,
      ]
    }
    sx={{}}
    variant="outline"
  >
    <TextInput
      accessible={true}
      aria-label="Input Field"
      aria-selected={false}
      data-style=""
      dataSet={
        {
          "disabled": "false",
          "focus": "false",
          "focusVisible": "false",
          "hover": "false",
          "invalid": "false",
          "readonly": "false",
          "required": "false",
          "style": "",
        }
      }
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder="请输入用户名"
      placeholderTextColor="#737373"
      readOnly={false}
      secureTextEntry={false}
      size="md"
      states={
        {
          "disabled": undefined,
          "focus": false,
          "focusVisible": false,
          "hover": undefined,
          "invalid": false,
          "readonly": false,
          "required": false,
        }
      }
      style={
        [
          undefined,
          {},
          undefined,
          {
            "color": "#262626",
            "flex": 1,
          },
          undefined,
          undefined,
          undefined,
          {
            "overflow": "hidden",
            "paddingHorizontal": 12,
            "paddingVertical": "auto",
          },
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          {},
          undefined,
          {},
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          {
            "color": "#262626",
          },
          undefined,
          undefined,
        ]
      }
      sx={
        {
          "_dark": {
            "color": "$textDark50",
            "placeholderTextColor": "$textDark400",
          },
          "color": "$textLight900",
        }
      }
      type="text"
    />
  </View>
</View>
`;

exports[`AppInput (gluestack-ui) 快照测试 应该匹配错误状态的快照 1`] = `
<View
  data-style=""
  dataSet={
    {
      "disabled": "false",
      "invalid": "true",
      "style": "",
    }
  }
  feedbackId="field-1-feedback"
  hasFeedbackText={true}
  hasHelpText={false}
  helpTextId="field-1-helptext"
  id="field-1"
  isReadOnly={false}
  isRequired={false}
  labelId="field-1-label"
  setHasFeedbackText={[Function]}
  setHasHelpText={[Function]}
  size="md"
  states={
    {
      "disabled": false,
      "invalid": true,
    }
  }
  style={
    [
      undefined,
      {},
      undefined,
      {
        "flexDirection": "column",
      },
      undefined,
      undefined,
      undefined,
      {},
      undefined,
      undefined,
    ]
  }
  sx={{}}
>
  <View
    data-style=""
    dataSet={
      {
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
        "invalid": "true",
        "readonly": "false",
        "required": "false",
        "style": "",
      }
    }
    size="md"
    states={
      {
        "disabled": false,
        "focus": false,
        "focusVisible": false,
        "hover": undefined,
        "invalid": true,
        "readonly": false,
        "required": false,
      }
    }
    style={
      [
        undefined,
        {},
        undefined,
        {
          "alignContent": "center",
          "borderColor": "#D4D4D4",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        },
        undefined,
        undefined,
        undefined,
        {
          "height": 40,
        },
        undefined,
        {},
        undefined,
        {
          "borderColor": "#B91C1C",
        },
        undefined,
        undefined,
      ]
    }
    sx={{}}
    variant="outline"
  >
    <TextInput
      accessible={true}
      aria-invalid={true}
      aria-label="Input Field"
      aria-selected={false}
      data-style=""
      dataSet={
        {
          "disabled": "false",
          "focus": "false",
          "focusVisible": "false",
          "hover": "false",
          "invalid": "true",
          "readonly": "false",
          "required": "false",
          "style": "",
        }
      }
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder="请输入"
      placeholderTextColor="#737373"
      readOnly={false}
      secureTextEntry={false}
      size="md"
      states={
        {
          "disabled": undefined,
          "focus": false,
          "focusVisible": false,
          "hover": undefined,
          "invalid": true,
          "readonly": false,
          "required": false,
        }
      }
      style={
        [
          undefined,
          {},
          undefined,
          {
            "color": "#262626",
            "flex": 1,
          },
          undefined,
          undefined,
          undefined,
          {
            "overflow": "hidden",
            "paddingHorizontal": 12,
            "paddingVertical": "auto",
          },
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          {},
          undefined,
          {},
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          {
            "color": "#262626",
          },
          undefined,
          undefined,
        ]
      }
      sx={
        {
          "_dark": {
            "color": "$textDark50",
            "placeholderTextColor": "$textDark400",
          },
          "color": "$textLight900",
        }
      }
      type="text"
    />
  </View>
  <View
    data-style=""
    dataSet={
      {
        "style": "",
      }
    }
    feedbackId="field-1-feedback"
    hasFeedbackText={true}
    hasHelpText={false}
    helpTextId="field-1-helptext"
    id="field-1"
    isDisabled={false}
    isReadOnly={false}
    isRequired={false}
    labelId="field-1-label"
    setHasFeedbackText={[Function]}
    setHasHelpText={[Function]}
    style={
      [
        undefined,
        {},
        undefined,
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "flex-start",
          "marginTop": 4,
        },
        undefined,
        undefined,
        undefined,
        undefined,
      ]
    }
    sx={{}}
  >
    <Text
      data-style=""
      dataSet={
        {
          "style": "",
        }
      }
      size="xs"
      style={
        [
          undefined,
          {},
          undefined,
          {
            "color": "#525252",
            "fontFamily": undefined,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          undefined,
          undefined,
          undefined,
          {
            "fontSize": 12,
            "lineHeight": 20,
          },
          undefined,
          {
            "fontSize": 12,
            "lineHeight": 20,
          },
          undefined,
          {
            "color": "#E63535",
          },
          undefined,
          undefined,
          {},
          undefined,
          {
            "color": "#B91C1C",
          },
          undefined,
          undefined,
          undefined,
          {},
          undefined,
          {
            "color": "#E63535",
          },
          undefined,
          undefined,
        ]
      }
      sx={
        {
          "_dark": {
            "color": "$error400",
          },
          "color": "$error500",
        }
      }
    >
      输入错误
    </Text>
  </View>
</View>
`;
